Tests/Conformance/Generated/Builtin/Constant/Pair/IllTypedNestedPair.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.Pair.IllTypedNestedPair

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_pair_illTypedNestedPair "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/pair/illTypedNestedPair/illTypedNestedPair.uplc"

end Tests.Conformance.Generated.Builtin.Constant.Pair.IllTypedNestedPair
